2007-08-12 Xavier Claessens  <xclaesse@gmail.com>

	* configure.ac: Bump version to 0.12.

2007-08-12 Xavier Claessens  <xclaesse@gmail.com>

	* configure.ac: Update libtool version.

	* doc/libempathy-gtk/tmpl/empathy-images.sgml:
	* doc/libempathy-gtk/tmpl/empathy-status-presets.sgml:
	* NEWS: Updated.

2007-08-12 Xavier Claessens  <xclaesse@gmail.com>

	* data/irc.profile: Removed spaces in the SupportedPresences key to
	workaround a MC warning SF bug 1772539.

2007-08-11 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-accounts-dialog.c: Make "Add account" button
	insensitive when we are creating one. Fixes bug #459170
	(Jaap A. Haitsma).

2007-08-11 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy/empathy-tp-contact-list.c: s/Local Network/People nearby/
	(Sjoerd Simons)

2007-08-10 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-accounts-dialog.c: Unselect accounts when
	clicking on "add" button. Fixes bug #459173 (Cosimo Cecchi).

2007-08-10 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-presence-chooser.glade: add some spacing in
	"Custom message" dialog. Fixes bug #465360 (Frederic Peters).

2007-08-10 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-images.h:
	* libempathy-gtk/empathy-presence-chooser.c:
	* libempathy-gtk/empathy-ui-utils.c:
	* libempathy/empathy-presence.c: Add hidden supprot. Fixes bug #455510
	(Cosimo Cecchi).

	* data/gtalk.profile:
	* data/jabber.profile:
	* data/salut.profile:
	* data/irc.profile:
	* data/msn.profile: Updated to use SupportedPresences field.

2007-08-09 Xavier Claessens  <xclaesse@gmail.com>

	* libempathy-gtk/empathy-presence-chooser.glade:
	* libempathy-gtk/empathy-presence-chooser.c:
	* libempathy-gtk/empathy-status-presets.c:
	* libempathy-gtk/empathy-status-presets.h:
	* libempathy-gtk/empathy-ui-utils.c: Remove per-state
	"Custom message..." item and add one on the bottom of the menu. Add