@@ -1,3 +1,13 @@
+2007-08-13 Xavier Claessens  <xclaesse@gmail.com>
+
+	* libempathy-gtk/empathy-group-chat.c: Only update the topic of it has
+	really be changed, avoid diplaying many times "Topic set to:" message.
+
+	* libempathy-gtk/empathy-chat.c: Some Jabber chatroom sends messages
+	received before we joined the room, this avoid displaying those messages
+	if we already logged them last time we joined that room. Previous
+	workaround prevented Empathy to log offline messages.
+
 2007-08-12 Xavier Claessens  <xclaesse@gmail.com>
 
 	* configure.ac: Bump version to 0.12.
